[package]
name = "great_western_trail"
version = "0.1.0"
authors = ["michael <mfdeakin@cs.unc.edu>"]
edition = "2018"

[lib]
name = "engine"
path = "src/engine/engine.rs"
test = true

[dependencies]
criterion = "0.3"
rand = { version = "0.8.0", features = ["small_rng", "serde", "serde1"] }
rand_pcg = { version = "0.3.1", features = ["serde", "serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "gwt_bench"
harness = false